# msp

./: 1.msp  2.msp  3.msp  Cargo.toml  README.md  index.html  msp-40e22a590ca08cfc.js  msp-40e22a590ca08cfc_bg.wasm  sw.js
.github/workflows/: continuous_integration.yml  pages_build_write.yml  workflow_runs_delete.yml
input/: 14_1-317.MSP  16_1-345 (51,316).MSP  16_1-345 (52,314).MSP  16_1-345.MSP  16_2-343 (54,430).MSP  16_2-343 (55,937).MSP
input/1/: 9,12-17_2.MSP  9,12-18_2.MSP  9,12_16_2.MSP
input/2/: 1-18_1.MSP  19.MSP  2_18_1.MSP  3_18_1.MSP
src/: app copy.rs  app.rs  main.rs  parser.rs
src/app/: bounder.rs  mod copy 2.rs  mod copy.rs  mod.rs  permutationer.rs  predictioner copy.rs  predictioner.rs
src/utils/: bound.rs  display.rs  egui.rs  higher_order_functions.rs  mod.rs  ndarray copy.rs  ndarray.rs  stats.rs  string.rs  temp.rs
src/utils/egui/: collapsing_state.rs  dropped_file.rs  mod.rs  ui.rs
src/widget/: atom.rs  mod.rs  molecule.rs  temp
