[package]
name = "msp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
egui = "0.21.0"
eframe = { version = "0.21.2", features = [
    "persistence",
    "wgpu",
] }
nom = "7.1.3"
serde = { version = "1.0.152", features = ["derive"] }
indexmap = { version = "1.9.2", features = ["serde"] }

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# Wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
