[package]
name = "msp"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
eframe = { version = "0.21.3", features = ["persistence", "wgpu"] }
egui = "0.21.0"
egui-dropdown = "0.1.0"
finitediff = "0.1.4"
getrandom = { version = "0.2.8", features = ["js"] }
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = "0.10.5"
nom = "7.1.3"
serde = { version = "1.0.152", features = ["derive"] }
smoothed_z_score = "0.1.3"
tracing = "0.1.37"
ndarray = "0.15.6"
petgraph = "0.6.3"
ndarray-stats = "0.5.1"
# ndarray = { git = "https://github.com/rust-ndarray/ndarray" }
# arrayfire = "3.8.0"

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# Wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
